SET(TEST_LINK
   glhck
   glfw)

IF (UNIX)
   LIST(APPEND TEST_LINK X11 Xxf86vm Xrandr rt)
ENDIF (UNIX)

IF (GLHCK_USE_GLES)
   LIST(APPEND TEST_LINK GLES_CM EGL)
ELSE ()
   LIST(APPEND TEST_LINK GL GLEW)
ENDIF ()

SET(TEST_EXE
   display)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TEST_OUT_DIR})
foreach (test ${TEST_EXE})
   PROJECT(${test})
   ADD_EXECUTABLE(${test} src/${test}.c)
   TARGET_LINK_LIBRARIES(${test} ${TEST_LINK})
endforeach (test)
