SET(GLFW_BUILD_EXAMPLES 0 CACHE BOOL "Don't build examples for GLFW")
SET(GLFW_BUILD_TESTS 0 CACHE BOOL "Don't build tests for GLFW")

# Check if we should use EGL
SET(GLFW_USE_EGL 0 CACHE BOOL "Don't use EGL with GLFW")
IF (GLHCK_USE_GLES1 OR GLHCK_USE_GLES2)
   SET(GLFW_USE_EGL 1 CACHE BOOL "Use EGL with GLFW")
ENDIF ()

ADD_SUBDIRECTORY(src)
