PROJECT(GLSW)
SET(GLSW_SRC
   src/bstrlib.c
   src/glsw.c)

IF (UNIX AND (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX))
   SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
   IF (${CMAKE_VERSION} VERSION_LESS 2.8.9)
      ADD_DEFINITIONS(-fPIC)
   ENDIF ()
ENDIF ()

ADD_LIBRARY(glsw ${GLSW_SRC})
TARGET_LINK_LIBRARIES(glsw)
